--- a/Portfolio/tenants.html
+++ b/Portfolio/tenants.html
@@ -54,13 +54,13 @@ window.onclick = function(event) {
 	</div>
 	<div class = "descript" style = "margin-top: 30px">
 		<h2>Progress Thus Far</h2>
-		<p>So far we have had many meetings with our client contacts, Juliana and David. There has been a very fluid exchange of ideas as they told us what they absolutely wanted for their new site and we have advised them (to our best knowledge) of the most efficient ways to implement such ideas. Most of the website is complete, and the things that are not complete yet have placeholders so that you can get an idea of what the final product will be! </p>
+		<p>So far we have had many meetings with our client contacts, Juliana and David. There has been a very fluid exchange of ideas as they told us what they absolutely wanted for their new site and we have advised them (to our best knowledge) of the most efficient ways to implement such ideas. Most of the website is complete, and the things that are not complete yet have placeholders so that you can get an idea of what the final product will be! TEST</p>
 	</div>
 
 
     <div class = "basket">
       <h2 style = "margin-top: 70px">New Site:</h2>
-      <iframe src = "http://team-julia.squarespace.com/" height = 700px width = 100%></iframe><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <iframe src = "http://team-julia.squarespace.com/" height = 700px width = 100%></iframe>
     </div>
 
 </body>
