--- a/Portfolio/tenants.html
+++ b/Portfolio/tenants.html
@@ -60,7 +60,7 @@ window.onclick = function(event) {
 
     <div class = "basket">
       <h2 style = "margin-top: 70px">New Site:</h2>
-      <iframe src = "http://team-julia.squarespace.com/" height = 700px width = 100%></iframe>
+      <iframe src = "https://team-julia.squarespace.com/" height = 600px width = 100%></iframe>
     </div>
 
 </body>
