--- a/Portfolio/tenants.html
+++ b/Portfolio/tenants.html
@@ -50,18 +50,15 @@ window.onclick = function(event) {
 <body>
 	<div class = "descript">
 		<h2>Knowbility Challenge (Austin Tenants Council)</h2>
-		<p>I, along with the rest of Team Julia, decided to partake in the Knowbility Accessibility Challenge that was discussed in lecture. We have had a great time acquianting ourselves with client interactions and accessible web design in a way that not only helps us, but helps a great non-profit organization as well. I am proud of our final product and this that it will greatly help the Austin Tenants Council. Below, the old and new sites are displayed for comparison purposes.</p>
+		<p>I, along with the rest of Team Julia, decided to partake in the Knowbility Accessibility Challenge that was discussed in lecture. We have had a great time acquianting ourselves with client interactions and accessible web design in a way that not only helps us, but helps a great non-profit organization as well. I am proud of our final product and this that it will greatly help the Austin Tenants Council. I wanted to display the old and new ones here to show you but it wasn't loading properly on mobile platforms so I just have the new one here for you. If you want to go to the old site, click <a href = "housing-rights.org" style = "text-decoration: none;)"">here</a>
 	</div>
 	<div class = "descript" style = "margin-top: 30px">
 		<h2>Progress Thus Far</h2>
 		<p>So far we have had many meetings with our client contacts, Juliana and David. There has been a very fluid exchange of ideas as they told us what they absolutely wanted for their new site and we have advised them (to our best knowledge) of the most efficient ways to implement such ideas. Most of the website is complete, and the things that are not complete yet have placeholders so that you can get an idea of what the final product will be!</p>
 	</div>
-    <div class = "basket">
-      <h2 style = "margin-top: 70px">New Site:</h2>
-      <iframe src = "https://housing-rights.org/">
 
     <div class = "basket">
-      <h2 style = "margin-top: 70px">New Site:</h2>
+      <h2 style = "margin-top: 50px">New Site:</h2>
       <iframe src = "https://team-julia.squarespace.com/"></iframe><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </div>
 
