--- a/Portfolio/tenants.html
+++ b/Portfolio/tenants.html
@@ -59,7 +59,8 @@ window.onclick = function(event) {
 
     <div class = "basket">
       <h2 style = "margin-top: 50px">New Site: TEST</h2>
-      <iframe src = "https://team-julia.squarespace.com/"></iframe><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <div class = "iframe_basket">
+      <iframe src = "https://team-julia.squarespace.com/"></iframe></div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </div>
 
 </body>
