--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -32,18 +32,18 @@ window.onclick = function(event) {
 <header>
 	<nav id = "top-nav" class = "top-nav">
 		<div class="logo">
-		<a href = "index.html"><img src = "pics/logo.png" alt = "Logo with Name Initials" height = "80" width = "80"></a>
+		<a href = "index.html" tabindex = 0><img src = "pics/logo.png" alt = "logo" height = "80" width = "80"></a>
 		</div>
 		<ul>
 			<li><div class = 'dropdown'>
-			<button onclick="myFunction()" class = "dropbtn">Knowbility Challenge</li></button>
+			<button onclick="myFunction()" class = "dropbtn" tabindex = 1 aria-label = "Knowbility Challenge Drop Down Menu">Knowbility Challenge</li></button>
 				<div id="myDropdown" class = "dropdown-content">
-					<a href = "tenants.html" class = 'red'>Site Renovation</a>
-					<a href = "donors.html">Tenants Page</a>
+					<a href = "tenants.html" tabindex = 2 aria-label = "Site Renovation page">Site Renovation</a>
+					<a href = "donors.html" tabindex = 3 aria-label = "Tenants Page">Tenants Page</a>
 			</div></div>
-			<li><a href = "food.html">Hobbies</a></li>
-			<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
-			<li><a href = "contact.html" class = "red">Contact Me</a></li>
+			<li><a href = "food.html" tabindex = 4 aria-label = "Hobbies Page">Hobbies</a></li>
+			<li><a href="about.html" style="text-decoration: none;" tabindex = 5 aria-label = "Information about me!">About Me</a></li>
+			<li><a href = "contact.html" tabindex = 6 aria-label = "contact page" class = "red">Contact Me</a></li>
 		</ul>
 	</nav>
 </header>
@@ -55,18 +55,18 @@ window.onclick = function(event) {
 	<form action="https://formspree.io/nealonsuthersan@gmail.com"
       method="POST">
     <p>Name</p>
-    <input type="text" name="name"><br>
+    <input type="text" name="name" tabindex = 7><br>
     <p>Email</p>
-    <input type="email" name="_replyto"><br>
+    <input type="email" name="_replyto" tabindex = 8><br>
     <p>Reason for Contact</p>
-    <input type="text" name="reason_for_contact"><br>
-    <input type="submit" value="Send" style= "margin-top: 5px; margin-bottom: 200px">
+    <input type="text" name="reason_for_contact" tabindex = 9><br>
+    <input type="submit" value="Send" style= "margin-top: 5px; margin-bottom: 200px" tabindex = 10>
 	</form>
 	</div>
 </body>
 	<footer> Thank you for checking out my site!
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-  	<a href="mailto:nealons@umich.edu?Subject=Hello!"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-    <a href="https://www.instagram.com/boozybrownsugar" aria-label="Instagram"><i class="fa fa-instagram"></i></a>
-    <a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
+  	<a href="mailto:nealons@umich.edu?Subject=Hello!"><i class="fa fa-envelope" aria-hidden="true" tabindex = 11></i></a>
+    <a href="https://www.instagram.com/boozybrownsugar" aria-label="Instagram" tabindex = 12><i class="fa fa-instagram"></i></a>
+    <a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/" aria-label="LinkedIn" tabindex = 13><i class="fa fa-linkedin"></i></a>
   </footer>
