--- a/Portfolio/food.html
+++ b/Portfolio/food.html
@@ -31,18 +31,18 @@ window.onclick = function(event) {
 <header>
 	<nav id = "top-nav" class = "top-nav">
 		<div class="logo">
-		<a href = "index.html"><img src = "pics/logo.png" alt = "Logo with Name Initials" height = "80" width = "80"></a>
+		<a href = "index.html" tabindex = 0><img src = "pics/logo.png" alt = "logo" height = "80" width = "80"></a>
 		</div>
 		<ul>
 			<li><div class = 'dropdown'>
-			<button onclick="myFunction()" class = "dropbtn">Knowbility Challenge</li></button>
+			<button onclick="myFunction()" class = "dropbtn" tabindex = 1 aria-label = "Knowbility Challenge Drop Down Menu">Knowbility Challenge</li></button>
 				<div id="myDropdown" class = "dropdown-content">
-					<a href = "tenants.html" class = 'red'>Site Renovation</a>
-					<a href = "donors.html">Tenants Page</a>
+					<a href = "tenants.html" tabindex = 2 aria-label = "Site Renovation page">Site Renovation</a>
+					<a href = "donors.html" tabindex = 3 aria-label = "Tenants Page">Tenants Page</a>
 			</div></div>
-			<li><a href = "food.html" class = "red">Hobbies</a></li>
-			<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
-			<li><a href = "contact.html" >Contact Me</a></li>
+			<li><a href = "food.html" class = "red" tabindex = 4 aria-label = "Hobbies Page">Hobbies</a></li>
+			<li><a href="about.html" style="text-decoration: none;" tabindex = 5 aria-label = "Information about me!">About Me</a></li>
+			<li><a href = "contact.html" tabindex = 6 aria-label = "contact page">Contact Me</a></li>
 		</ul>
 	</nav>
 </header>
@@ -52,7 +52,7 @@ window.onclick = function(event) {
 		<h3 id = "single">One of my biggest hobbies is cooking and photographing food! Here's a couple examples!</h3>
 		  <div class="column" id = 'front'>
 		    <div class="content">
-		    <a target="_blank" href="pics/breakfast.JPEG">
+		    <a target="_blank" href="pics/breakfast.JPEG" tabindex = 7>
 		      <img src="pics/breakfast.JPEG" alt="Breakfast" style="width:100%" z = 2></a>
 		      <h3 id = "cap">A great Creole breakfast!</h3>
 		      <p>Seattle, WA</p>
@@ -60,7 +60,7 @@ window.onclick = function(event) {
 		  </div>
 		  <div class="column">
 		    <div class="content" id = 'front'>
-		    <a target="_blank" href="pics/salad.JPEG">
+		    <a target="_blank" href="pics/salad.JPEG" tabindex = 8>
 		      <img src="pics/salad.JPEG" alt="Salad" style="width:100%" z = 2></a>
 		      <h3 id = "cap">This is a salad I made!</h3>
 		      <p>Nealon's House in Yardley, PA</p>
@@ -68,7 +68,7 @@ window.onclick = function(event) {
 		  </div>
 		  <div class="column">
 		    <div class="content">
-		    <a target="_blank" href="pics/tomukun.JPEG">
+		    <a target="_blank" href="pics/tomukun.JPEG" tabindex = 9>
 		      <img src="pics/tomukun.JPEG" alt="Breakfast" style="width:100%" z = 2></a>
 		      <h3 id = "cap">My favorite pho in Ann Arbor!</h3>
 		      <p>Tomukun in Ann Arbor, MI</p>
@@ -76,7 +76,7 @@ window.onclick = function(event) {
 		  </div>
 		  <div class="column">
 		    <div class="content">
-		    <a target="_blank" href="pics/potatoes.JPEG">
+		    <a target="_blank" href="pics/potatoes.JPEG" tabindex = 10>
 		      <img src="pics/potatoes.JPEG" alt="Salad" style="width:100%" z = 2></a>
 		      <h3 id = "cap">My take on my mom's potatoes!</h3>
 		      <p>Nealon's apartment in Ann Arbor, MI</p>
@@ -84,7 +84,7 @@ window.onclick = function(event) {
 		  </div>
 		  <div class="column">
 		    <div class="content">
-		 	<a target="_blank" href="pics/rao.JPEG">
+		 	<a target="_blank" href="pics/rao.JPEG" tabindex = 11>
 		      <img src="pics/rao.JPEG" alt="Pasta" style="width:100%" z = 2></a>
 		      <h3 id = "cap">Some chicken I made at school!</h3>
 		      <p>Nealon's apartment in Ann Arbor, MI</p>
@@ -92,7 +92,7 @@ window.onclick = function(event) {
 		  </div>
 		  <div class="column">
 		    <div class="content">
-		   	<a target="_blank" href="pics/chicken.JPEG">
+		   	<a target="_blank" href="pics/chicken.JPEG" tabindex = 12>
 		      <img src="pics/chicken.JPEG" alt="Banana Leaf meal" style="width:100%"></a>
 		      <h3 id = "cap">My attempt at a roast chicken!</h3>
 		      <p>Nealon's apartment in Ann Arbor, MI</p>
@@ -100,7 +100,7 @@ window.onclick = function(event) {
 		  </div>
 		  <div class="column">
 		    <div class="content">
-		    <a target="_blank" href="pics/pizza.JPEG">
+		    <a target="_blank" href="pics/pizza.JPEG" tabindex = 13>
 		      <img src="pics/pizza.JPEG" alt="Breakfast" style="width:100%" z = 2></a>
 		      <h3 id = "cap">Pizza that I made at home!</h3>
 		      <p>Nealon's House in Yardley, PA</p>
@@ -108,7 +108,7 @@ window.onclick = function(event) {
 		  </div>
 		  <div class="column">
 		    <div class="content">
-		    <a target="_blank" href="pics/fishcheeks.JPEG">
+		    <a target="_blank" href="pics/fishcheeks.JPEG" tabindex = 14>
 		      <img src="pics/fishcheeks.JPEG" alt="Salad" style="width:100%" z = 2></a>
 		      <h3 id = "cap">My favorite Thai restaurant!</h3>
 		      <p>Fish Cheeks in New York, NY</p>
@@ -117,7 +117,7 @@ window.onclick = function(event) {
 		  </div>
 		  <div class="column">
 		    <div class="content">
-		 	<a target="_blank" href="pics/buvette.JPEG">
+		 	<a target="_blank" href="pics/buvette.JPEG" tabindex = 15>
 		      <img src="pics/buvette.JPEG" alt="Buvette brunch " style="width:100%" z = 2></a>
 		      <h3 id = "cap">My mom's favorite restaurant!</h3>
 		      <p>Buvette in New York, NY</p>
@@ -132,7 +132,7 @@ window.onclick = function(event) {
 
 	<footer> Thank you for checking out my site!
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-  	<a href="mailto:nealons@umich.edu?Subject=Hello!"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-    <a href="https://www.instagram.com/boozybrownsugar" aria-label="Instagram"><i class="fa fa-instagram"></i></a>
-    <a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
+  	<a href="mailto:nealons@umich.edu?Subject=Hello!"><i class="fa fa-envelope" tabindex = 16 aria-hidden="true"></i></a>
+    <a href="https://www.instagram.com/boozybrownsugar" aria-label="Instagram" tabindex = 17><i class="fa fa-instagram"></i></a>
+    <a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/" aria-label="LinkedIn" tabindex = 18><i class="fa fa-linkedin"></i></a>
   </footer>
