--- a/Portfolio/tenants.html
+++ b/Portfolio/tenants.html
@@ -32,18 +32,18 @@ window.onclick = function(event) {
 <header>
 	<nav id = "top-nav" class = "top-nav">
 		<div class="logo">
-		<a href = "index.html"><img src = "pics/logo.png" alt = "logo" height = "80" width = "80"></a>
+		<a href = "index.html" tabindex = 0><img src = "pics/logo.png" alt = "logo" height = "80" width = "80"></a>
 		</div>
 		<ul>
 			<li><div class = 'dropdown'>
-			<button onclick="myFunction()" class = "dropbtn red">Knowbility Challenge</li></button>
+			<button onclick="myFunction()" class = "dropbtn red" tabindex = 1 aria-label = "Knowbility Challenge Drop Down Menu">Knowbility Challenge</li></button>
 				<div id="myDropdown" class = "dropdown-content">
-					<a href = "tenants.html" class = 'red'>Site Renovation</a>
-					<a href = "donors.html">Tenants Page</a>
+					<a href = "tenants.html" class = 'red' tabindex = 2 aria-label = "Site Renovation page">Site Renovation</a>
+					<a href = "donors.html" tabindex = 3 aria-label = "Tenants Page">Tenants Page</a>
 			</div></div>
-			<li><a href = "food.html">Hobbies</a></li>
-			<li><a href="about.html" style="text-decoration: none;">About Me</a></li>
-			<li><a href = "contact.html" >Contact Me</a></li>
+			<li><a href = "food.html" tabindex = 4 aria-label = "Hobbies Page">Hobbies</a></li>
+			<li><a href="about.html" style="text-decoration: none;" tabindex = 5 aria-label = "Information about me!">About Me</a></li>
+			<li><a href = "contact.html" tabindex = 6 aria-label = "contact page">Contact Me</a></li>
 		</ul>
 	</nav>
 </header>
@@ -66,7 +66,7 @@ window.onclick = function(event) {
 </body>
 	<footer> Thank you for checking out my site!
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-  	<a href="mailto:nealons@umich.edu?Subject=Hello!"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-    <a href="https://www.instagram.com/boozybrownsugar" aria-label="Instagram"><i class="fa fa-instagram"></i></a>
-    <a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
+  	<a href="mailto:nealons@umich.edu?Subject=Hello!" tabindex = 7><i class="fa fa-envelope" aria-hidden="true"></i></a>
+    <a href="https://www.instagram.com/boozybrownsugar" aria-label="Instagram" tabindex = 8><i class="fa fa-instagram"></i></a>
+    <a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/" aria-label="LinkedIn" tabindex = 9><i class="fa fa-linkedin"></i></a>
   </footer>
