--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -49,11 +49,11 @@ window.onclick = function(event) {
 		<section class="pictures">
 		<div class = "grid">
 			<div class = "row">
-				<a href = "http://moonlitlabradors.com/" tabindex = 7>
+				<a href = "http://moonlitlabradors.com/" tabindex = 7 aria-label = "my dog breeder website">
 				<img class = 'dog flex' src = "pics/dog.JPG" alt = "This is a picture of my future dog!"></a>
 				</div>
 			<div class = "row">
-				<a href = "https://www.instagram.com/boozybrownsugar/" tabindex = 8>
+				<a href = "https://www.instagram.com/boozybrownsugar/" tabindex = 8 aria-label = "instagram link">
 				<img class = 'me flex' src = "pics/me.JPG" alt = 'This is a picture of me! Click it to see my instagram!'></a>
 				</div>
 			</div>
@@ -63,12 +63,12 @@ window.onclick = function(event) {
 
 	<div class="container2">
 	  <img src="pics/clouds.JPEG" alt="Background picture of clouds behind LinkedIn Link" style="width:100%";>
-	  <a href = "https://www.linkedin.com/in/nealon-suthersan-68aa55142/" tabindex =9><div class="centered1">Here's my linkedin! So you can learn more about me.</div></a>
+	  <a href = "https://www.linkedin.com/in/nealon-suthersan-68aa55142/" tabindex = 9><div class="centered1">Here's my linkedin! So you can learn more about me.</div></a>
 	</div>
 </body>
 	<footer> Thank you for checking out my site!
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-  	<a href="mailto:nealons@umich.edu?Subject=Hello!"><i class="fa fa-envelope" aria-hidden="true" tabindex = 10></i></a>
+  	<a href="mailto:nealons@umich.edu?Subject=Hello!"><i class="fa fa-envelope" aria-label="email" tabindex = 10></i></a>
     <a href="https://www.instagram.com/boozybrownsugar" aria-label="Instagram" tabindex = 11><i class="fa fa-instagram"></i></a>
     <a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/" aria-label="LinkedIn" tabindex = 12><i class="fa fa-linkedin"></i></a>
   </footer>
