--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -55,18 +55,18 @@ window.onclick = function(event) {
 	<form action="https://formspree.io/nealonsuthersan@gmail.com"
       method="POST">
     <p>Name</p>
-    <input type="text" name="name" tabindex = 7><br>
+    <input type="text" name="name" tabindex = 7 aria-label = "name"><br>
     <p>Email</p>
-    <input type="email" name="_replyto" tabindex = 8><br>
+    <input type="email" name="_replyto" tabindex = 8 arial-label = "email"><br>
     <p>Reason for Contact</p>
-    <input type="text" name="reason_for_contact" tabindex = 9><br>
+    <input type="text" name="reason_for_contact" tabindex = 9 aria-label = "reason for contact"><br>
     <input type="submit" value="Send" style= "margin-top: 5px; margin-bottom: 200px" tabindex = 10>
 	</form>
 	</div>
 </body>
 	<footer> Thank you for checking out my site!
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-  	<a href="mailto:nealons@umich.edu?Subject=Hello!"><i class="fa fa-envelope" aria-hidden="true" tabindex = 11></i></a>
+  	<a href="mailto:nealons@umich.edu?Subject=Hello!"><i class="fa fa-envelope" aria-label="Email" tabindex = 11></i></a>
     <a href="https://www.instagram.com/boozybrownsugar" aria-label="Instagram" tabindex = 12><i class="fa fa-instagram"></i></a>
     <a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/" aria-label="LinkedIn" tabindex = 13><i class="fa fa-linkedin"></i></a>
   </footer>
