--- a/Portfolio/food.html
+++ b/Portfolio/food.html
@@ -53,7 +53,7 @@ window.onclick = function(event) {
 		  <div class="column" id = 'front'>
 		    <div class="content">
 		    <a target="_blank" href="pics/breakfast.JPEG" tabindex = 7>
-		      <img src="pics/breakfast.JPEG" alt="Breakfast" style="width:100%" z = 2></a>
+		      <img src="pics/breakfast.JPEG" alt="Breakfast picture" style="width:100%" z = 2></a>
 		      <h3 id = "cap">A great Creole breakfast!</h3>
 		      <p>Seattle, WA</p>
 		    </div>
@@ -61,7 +61,7 @@ window.onclick = function(event) {
 		  <div class="column">
 		    <div class="content" id = 'front'>
 		    <a target="_blank" href="pics/salad.JPEG" tabindex = 8>
-		      <img src="pics/salad.JPEG" alt="Salad" style="width:100%" z = 2></a>
+		      <img src="pics/salad.JPEG" alt="Salad picture" style="width:100%" z = 2></a>
 		      <h3 id = "cap">This is a salad I made!</h3>
 		      <p>Nealon's House in Yardley, PA</p>
 		    </div>
@@ -69,7 +69,7 @@ window.onclick = function(event) {
 		  <div class="column">
 		    <div class="content">
 		    <a target="_blank" href="pics/tomukun.JPEG" tabindex = 9>
-		      <img src="pics/tomukun.JPEG" alt="Breakfast" style="width:100%" z = 2></a>
+		      <img src="pics/tomukun.JPEG" alt="Noodle picture" style="width:100%" z = 2></a>
 		      <h3 id = "cap">My favorite pho in Ann Arbor!</h3>
 		      <p>Tomukun in Ann Arbor, MI</p>
 		    </div>
@@ -77,7 +77,7 @@ window.onclick = function(event) {
 		  <div class="column">
 		    <div class="content">
 		    <a target="_blank" href="pics/potatoes.JPEG" tabindex = 10>
-		      <img src="pics/potatoes.JPEG" alt="Salad" style="width:100%" z = 2></a>
+		      <img src="pics/potatoes.JPEG" alt="Potato picture" style="width:100%" z = 2></a>
 		      <h3 id = "cap">My take on my mom's potatoes!</h3>
 		      <p>Nealon's apartment in Ann Arbor, MI</p>
 		    </div>
@@ -85,7 +85,7 @@ window.onclick = function(event) {
 		  <div class="column">
 		    <div class="content">
 		 	<a target="_blank" href="pics/rao.JPEG" tabindex = 11>
-		      <img src="pics/rao.JPEG" alt="Pasta" style="width:100%" z = 2></a>
+		      <img src="pics/rao.JPEG" alt="Pasta picture" style="width:100%" z = 2></a>
 		      <h3 id = "cap">Some chicken I made at school!</h3>
 		      <p>Nealon's apartment in Ann Arbor, MI</p>
 		    </div>
@@ -93,7 +93,7 @@ window.onclick = function(event) {
 		  <div class="column">
 		    <div class="content">
 		   	<a target="_blank" href="pics/chicken.JPEG" tabindex = 12>
-		      <img src="pics/chicken.JPEG" alt="Banana Leaf meal" style="width:100%"></a>
+		      <img src="pics/chicken.JPEG" alt="Banana Leaf meal picture" style="width:100%"></a>
 		      <h3 id = "cap">My attempt at a roast chicken!</h3>
 		      <p>Nealon's apartment in Ann Arbor, MI</p>
 		    </div>
@@ -101,7 +101,7 @@ window.onclick = function(event) {
 		  <div class="column">
 		    <div class="content">
 		    <a target="_blank" href="pics/pizza.JPEG" tabindex = 13>
-		      <img src="pics/pizza.JPEG" alt="Breakfast" style="width:100%" z = 2></a>
+		      <img src="pics/pizza.JPEG" alt="Pizza picture" style="width:100%" z = 2></a>
 		      <h3 id = "cap">Pizza that I made at home!</h3>
 		      <p>Nealon's House in Yardley, PA</p>
 		    </div>
@@ -109,7 +109,7 @@ window.onclick = function(event) {
 		  <div class="column">
 		    <div class="content">
 		    <a target="_blank" href="pics/fishcheeks.JPEG" tabindex = 14>
-		      <img src="pics/fishcheeks.JPEG" alt="Salad" style="width:100%" z = 2></a>
+		      <img src="pics/fishcheeks.JPEG" alt="Thai food picture" style="width:100%" z = 2></a>
 		      <h3 id = "cap">My favorite Thai restaurant!</h3>
 		      <p>Fish Cheeks in New York, NY</p>
 		    </div>
@@ -118,7 +118,7 @@ window.onclick = function(event) {
 		  <div class="column">
 		    <div class="content">
 		 	<a target="_blank" href="pics/buvette.JPEG" tabindex = 15>
-		      <img src="pics/buvette.JPEG" alt="Buvette brunch " style="width:100%" z = 2></a>
+		      <img src="pics/buvette.JPEG" alt="Buvette brunch picture" style="width:100%" z = 2></a>
 		      <h3 id = "cap">My mom's favorite restaurant!</h3>
 		      <p>Buvette in New York, NY</p>
 		    </div>
@@ -132,7 +132,7 @@ window.onclick = function(event) {
 
 	<footer> Thank you for checking out my site!
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-  	<a href="mailto:nealons@umich.edu?Subject=Hello!"><i class="fa fa-envelope" tabindex = 16 aria-hidden="true"></i></a>
+  	<a href="mailto:nealons@umich.edu?Subject=Hello!"><i class="fa fa-envelope" tabindex = 16 aria-label="email"></i></a>
     <a href="https://www.instagram.com/boozybrownsugar" aria-label="Instagram" tabindex = 17><i class="fa fa-instagram"></i></a>
     <a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/" aria-label="LinkedIn" tabindex = 18><i class="fa fa-linkedin"></i></a>
   </footer>
