--- a/Portfolio/tenants.html
+++ b/Portfolio/tenants.html
@@ -58,15 +58,16 @@ window.onclick = function(event) {
 	</div>
 
     <div class = "basket">
-      <h2 style = "margin-top: 50px">New Site: TEST NEW DIV overflow2</h2>
+      <h2 style = "margin-top: 50px">New Site</h2>
+      <p>If you're viewing this on a mobile device, go to <a href = "https://team-julia.squarespace.com">this link</a>.</p>
       <div class = "iframe_basket">
-      <iframe src = "https://team-julia.squarespace.com/"></iframe></div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <iframe src = "https://team-julia.squarespace.com/"></iframe></div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </div>
 
 </body>
 	<footer> Thank you for checking out my site!
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-  	<a href="mailto:nealons@umich.edu?Subject=Hello!" tabindex = 7><i class="fa fa-envelope" aria-hidden="true"></i></a>
+  	<a href="mailto:nealons@umich.edu?Subject=Hello!" tabindex = 7><i class="fa fa-envelope" aria-label="email"></i></a>
     <a href="https://www.instagram.com/boozybrownsugar" aria-label="Instagram" tabindex = 8><i class="fa fa-instagram"></i></a>
     <a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/" aria-label="LinkedIn" tabindex = 9><i class="fa fa-linkedin"></i></a>
   </footer>
