--- a/Portfolio/donors.html
+++ b/Portfolio/donors.html
@@ -58,6 +58,7 @@ window.onclick = function(event) {
 	</div>
 	<div class = "row2">
 	  <h2 style = "text-align: center; margin-top: 100px">Tenant Page:</h2>
+	  <p>If you're viewing this on a mobile device, go to <a href = "https://team-julia.squarespace.com/renter-concerns">this link</a>.</p>
       <iframe src = "https://team-julia.squarespace.com/renter-concerns/"></iframe></div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
@@ -67,7 +68,7 @@ window.onclick = function(event) {
 
 	<footer> Thank you for checking out my site!
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-  	<a href="mailto:nealons@umich.edu?Subject=Hello!" tabindex = 7><i class="fa fa-envelope" aria-hidden="true"></i></a>
+  	<a href="mailto:nealons@umich.edu?Subject=Hello!" tabindex = 7><i class="fa fa-envelope" aria-label="email"></i></a>
     <a href="https://www.instagram.com/boozybrownsugar" aria-label="Instagram" tabindex = 8><i class="fa fa-instagram"></i></a>
     <a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/" aria-label="LinkedIn" tabindex = 9><i class="fa fa-linkedin"></i></a>
   </footer>
