--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -38,7 +38,7 @@ window.onclick = function(event) {
 				<div id="myDropdown" class = "dropdown-content">
 					<a href = "tenants.html" tabindex = 2 aria-label = "Site Renovation page">Site Renovation</a>
 					<a href = "donors.html" tabindex = 3 aria-label = "Tenants Page">Tenants Page</a>
-			</div></div>
+			</difile:///Users/nealonsuthersan/Desktop/Portfolio/about.htmlv></div>
 			<li><a href = "food.html" tabindex = 4 aria-label = "Hobbies Page">Hobbies</a></li>
 			<li><a href="about.html" style="text-decoration: none;" tabindex = 5 aria-label = "Information about me!">About Me</a></li>
 			<li><a href = "contact.html" tabindex = 6 aria-label = "contact page">Contact Me</a></li>
@@ -48,7 +48,7 @@ window.onclick = function(event) {
 <body class="body">
 
 	<div class="container1">
-	  <img src="pics/maine.JPEG" alt="Background picture of Portland, Maine, landscape" style="width:100%; margin-top: -50px;">
+	  <img src="pics/maine.JPEG" alt="Background picture of Portland, Maine, landscape" style="width:100%; height: 100vh; margin-top: -50px;">
 	  <div class="centered" style="margin-top: -16px;">My name is Nealon. I love cooking, watching TV, traveling, and learning about new and burgeoning ideas!</div>
 	</div>
 </body>
