--- a/Portfolio/donors.html
+++ b/Portfolio/donors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang= 'en'>
 <head>
-	<title>Nealon's Portfolio Homepage</title>
+	<title>Tenants Site</title>
 	<meta charset='UTF-8'>
 	<meta name="viewport" content= "width=device-width,
 	initial-scale=1, shrink-to-fit=no">
@@ -29,26 +29,25 @@ window.onclick = function(event) {
 }
 </script>
 </head>
-	<header>
-	<nav id = "top-nav" class = "top-nav">
-		<div class="logo">
-		<a href = "index.html" tabindex = 0><img src = "pics/logo.png" alt = "logo" height = "80" width = "80"></a>
-		</div>
-		<ul>
-			<li><div class = 'dropdown'>
-			<button onclick="myFunction()" class = "dropbtn red" tabindex = 1 aria-label = "Knowbility Challenge Drop Down Menu">Knowbility Challenge</li></button>
-				<div id="myDropdown" class = "dropdown-content">
-					<a href = "tenants.html" tabindex = 2 aria-label = "Site Renovation page">Site Renovation</a>
-					<a href = "donors.html" tabindex = 3 aria-label = "Tenants Page">Tenants Page</a>
-			</div></div>
-			<li><a href = "food.html" tabindex = 4 aria-label = "Hobbies Page">Hobbies</a></li>
-			<li><a href="about.html" style="text-decoration: none;" tabindex = 5 aria-label = "Information about me!">About Me</a></li>
-			<li><a href = "contact.html" tabindex = 6 aria-label = "contact page">Contact Me</a></li>
-		</ul>
-	</nav>
-	</header>
 <body>
-	<div class="row1">
+	<header>
+<div class="logo">
+    <a href = "index.html" tabindex = 0><img src = "pics/logo.png" alt = "logo" height = "80" width = "80" aria-label = "logo and home"></a></div>
+<nav class="topnav" id="myTopnav">
+  <a href="about.html" tabindex = 1 aria-label = "about me page">About Me</a>
+  <a href="food.html" tabindex = 2 aria-label = "hobbies page">Hobbies</a>
+  <a href="contact.html" tabindex = 3 aria-label = "contact page">Contact Me</a>
+  <div class="dropdown1">
+    <button class="dropbtn1 active" tabindex = 4 aria-label = "Knowbility challenge page">Knowbility Challenge 
+    </button>
+    <div class="dropdown-content1 ">
+      <a href="tenants.html" tabindex = 5 aria-label = "site renovation page">Site Renovation</a>
+      <a href="donors.html" tabindex = 6 aria-label = "tenants page">Tenants Site</a>
+    </div>
+  </div> 
+</nav>
+	</header>
+	<div class="row1" style="margin-top: 300px;">
 	  <div class="column1">
 	  <p><i>The Austin Tenants’ Council protects tenants’ rights and educates the community on fair housing. Our vision is to make Texas communities open to all without discrimination and free of landlord-tenant disputes.</i></p></div>
 	  <div class="column2">
@@ -58,19 +57,15 @@ window.onclick = function(event) {
 	</div>
 	<div class = "row2">
 	  <h2 style = "text-align: center; margin-top: 100px">Tenant Page:</h2>
-	  <p>If you're viewing this on a mobile device, go to <a href = "https://team-julia.squarespace.com/renter-concerns">this link</a>.</p>
+	  <p>If you're viewing this on a mobile device or site is not loading, go to <a href = "https://team-julia.squarespace.com/renter-concerns">this link</a>.</p>
       <iframe src = "https://team-julia.squarespace.com/renter-concerns/"></iframe></div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
-
-</body>
-
-
 	<footer> Thank you for checking out my site!
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   	<a href="mailto:nealons@umich.edu?Subject=Hello!" tabindex = 7><i class="fa fa-envelope" aria-label="email"></i></a>
     <a href="https://www.instagram.com/boozybrownsugar" aria-label="Instagram" tabindex = 8><i class="fa fa-instagram"></i></a>
     <a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/" aria-label="LinkedIn" tabindex = 9><i class="fa fa-linkedin"></i></a>
   </footer>
-
-	</footer>
+</body>
+</html>
